--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^5.2.1",
+    "@types/mongoose": "^5.10.1",
     "@types/node": "^8.0.47",
     "@typescript-eslint/eslint-plugin": "~2.7.0",
     "@typescript-eslint/parser": "~2.7.0",
