--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.19.5",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recoil": "^0.1.2",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
@@ -40,5 +43,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/recoil": "0.0.1",
+    "install": "^0.13.0"
+  }
 }
