--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,18 @@
     "@types/node": "^12.19.5",
     "@types/react-dom": "^16.9.9",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "formik": "^2.2.5",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recoil": "^0.1.2",
     "typescript": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,9 +50,11 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "^16.14.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/recoil": "0.0.1",
+    "@types/yup": "^0.29.9",
     "install": "^0.13.0"
   }
 }
