--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "recoil": "^0.1.2",
