--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^16.9.9",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
     "formik": "^2.2.5",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
