--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    links:
+      - "backend"
     image: sofomo-task/frontend
     ports:
       - "3000:3000"
