--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://backend:3001",
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jwt-decode": "^3.1.0",
