--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "formik": "^2.2.5",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/lodash": "^4.14.165",
     "@types/react": "^16.14.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/recoil": "0.0.1",
