--- a/backend/package.json
+++ b/backend/package.json
@@ -40,15 +40,19 @@
     "source-map-support": "^0.5.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^5.2.1",
     "@types/mongoose": "^5.10.1",
     "@types/node": "^8.0.47",
+    "@types/sinon": "^9.0.9",
     "@typescript-eslint/eslint-plugin": "~2.7.0",
     "@typescript-eslint/parser": "~2.7.0",
+    "chai": "^4.2.0",
     "concurrently": "^3.5.1",
     "copy": "^0.3.2",
     "eslint": "^6.7.0",
     "mocha": "^5.2.0",
+    "sinon": "^9.2.2",
     "supertest": "^3.3.0",
     "supervisor": "^0.12.0",
     "typescript": "~3.5.3"
